VBF-28 new: add todo's for other tickets, fix homepage alignment, fix header menu tablet (slide in from side like desktop), align imports

--- a/src/ui/components/header/components/header-menu/header-menu.component.scss
+++ b/src/ui/components/header/components/header-menu/header-menu.component.scss
@@ -5,12 +5,14 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 250px;
+    right: 0;
     top: $header-height + $border-width;
 
-    @include mq.mq(desktop) {
-        width: 250px;
-        right: 0;
+    @include mq.mq(mobile) {
+        width: 100%;
+        left: 0;
+        right: unset;
     }
 
     background-color: $header-background;
